fix errors and add summary

--- a/disaster-response/notebooks/ml-pipeline-preparation.ipynb
+++ b/disaster-response/notebooks/ml-pipeline-preparation.ipynb
@@ -5,9 +5,9 @@
    "metadata": {},
    "source": [
     "# ML Pipeline Preparation\n",
-    "This notebook was used set up the ml pipeline of the disaster recovery project and to get choose the best model and parameter settings based on the results from the grid search. The final model will be created in the python script train_classifier.py file, which is located [here](https://github.com/bruno-f7s/portfolio/tree/main/disaster-response/models/train_classifier.py).\n",
+    "This notebook was used to set up to try the machine learning pipeline of the disaster recovery project and to find the best model based on the results from the grid search with cross validation for multiple parameters and algorithms. The final model will be created in the python script train_classifier.py file, which is located [here](https://github.com/bruno-f7s/portfolio/tree/main/disaster-response/models/train_classifier.py).\n",
     "\n",
-    "Therefore this notebook is not necessary for launching the app, but can be revisited if a new dataset needs to be used to train a new model.\n",
+    "This notebook is not necessary for launching the app, but can be revisited if a new dataset needs to be used to train a new model.\n",
     "\n",
     "The code below is divided into the following steps:\n",
     "1. Import libraries\n",
@@ -268,9 +268,9 @@
     "__Observation 1__: In this project a train and validation splits were created __without the holdout set__ (which I typically do) for a few reasons:\n",
     "1. This is a multi-label problem with 36 labels so I decided it was feasible to use directly all the data available because there are some labels which are highly imbalanced and this could lead to many missing data of one category during training.\n",
     "2. The dataset is not that big and creating this holdout set would remove more data from the training processed.\n",
-    "3. This code is intended to be used to analyze and decide for the best model but the final model will be created in a different file. Therefore the results of the train/validation splits are sufficient to make a decision.\n",
+    "3. This code is intended to be used to analyze and decide for the best model but the final model will be created using all data nonetheless. Therefore the results of the train/validation splits are sufficient to make a decision.\n",
     "\n",
-    "__Observation 2__: The label categories \"request\" and \"child_alone\" only have one category available in this dataset (see distribution above). Because of this the model will always predict the same label regardless of the input. I decided to __remove them__ because they are simply adding noise to the model and since do not impact the predictions in any positive way."
+    "__Observation 2__: The label categories \"request\" and \"child_alone\" only have one category available in this dataset (see distribution above). Because of this the model will always predict the same label regardless of the input. I decided to __remove them__ because they are simply adding noise to the model and do not impact the predictions in any positive way."
    ]
   },
   {
@@ -755,8 +755,9 @@
    "metadata": {},
    "source": [
     "### 5. Model choice\n",
-    "The purpose of this project was not to achieve a specific performance metric but rather create a ml-pipeline that easily takes care of an NLP task that is then fed into an app. Neverthless I decided to apply GridSearchCV to search for multiple parameter combinations for different algorithms. I also using different scoring methods but tuned for the best f1-score. I decidide to use this metric because the data is somewhat complex with many labels and some of them very imbalanced. Accuracy would be too simplistic and therefore I decided to use the f1-score which offers a better balance between the recall and the precision.\n",
-    "\n"
+    "The purpose of this project was not to achieve a specific performance metric but rather create a ml-pipeline that easily takes care of an NLP task that is then fed into an app. Nevertheless I decided to apply GridSearchCV to search for multiple parameter combinations for different algorithms. I also using different scoring methods but tuned for the best f1-score. I used this metric because the data has many labels that are very imbalanced. Accuracy would be a too simplistic metric and precision was highly inflated, so I tried to balance it with the recall using the f1-score.\n",
+    "\n",
+    "Based on these 3 algorithms and the parameter combination I chose the __logistic regression__ because it had the best balance of scores."
    ]
   }
  ],
