add text corrections

--- a/disaster-response/notebooks/ml-pipeline-preparation.ipynb
+++ b/disaster-response/notebooks/ml-pipeline-preparation.ipynb
@@ -755,7 +755,7 @@
    "metadata": {},
    "source": [
     "### 5. Model choice\n",
-    "The purpose of this project was not to achieve a specific performance metric but rather create a ml-pipeline that easily takes care of an NLP task that is then fed into an app. Nevertheless I decided to apply GridSearchCV to search for multiple parameter combinations for different algorithms. I also using different scoring methods but tuned for the best f1-score. I used this metric because the data has many labels that are very imbalanced. Accuracy would be a too simplistic metric and precision was highly inflated, so I tried to balance it with the recall using the f1-score.\n",
+    "The purpose of this project was not to achieve a specific performance metric but rather create a ml-pipeline that easily takes care of an NLP task that is then fed into an app. Nevertheless I decided to apply GridSearchCV to search for multiple parameter combinations for different algorithms. I used different scoring methods but then tuned for the best f1-score. Accuracy would be a too simplistic metric and precision was highly inflated, so I tried to balance these scores with a higher recall and therefore measured the performance using the f1-score.\n",
     "\n",
     "Based on these 3 algorithms and the parameter combination I chose the __logistic regression__ because it had the best balance of scores."
    ]
