fix a broken link

--- a/arvarto-customer-segmentation/01-data-cleaning.ipynb
+++ b/arvarto-customer-segmentation/01-data-cleaning.ipynb
@@ -13,7 +13,7 @@
     "2. In this section the customers will be segmented using a __unsupervised learning approach__ and using the customer's data against the general population's data. Not only is the goal to understand which groups of customers are more interesting for the campaign but also to select the most important features.\n",
     "3. Using the information gained a __supervised learning algorithm__ will be used for a classification task to predict which recipients are most likely to become a customer for the mail-order company.\n",
     "\n",
-    "__Note__: This notebook only handles part 1. The other two parts can be found in this notebook [here]()."
+    "__Note__: This notebook only handles part 1. The other two parts can be found in this notebook [here](https://github.com/bruno-f7s/portfolio/blob/main/arvarto-customer-segmentation/02-model-development.ipynb)."
    ]
   },
   {
