--- a/arvarto-customer-segmentation/02-model-development.ipynb
+++ b/arvarto-customer-segmentation/02-model-development.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 163,
    "id": "1b578b55",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "import seaborn as sns\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
-    "from sklearn.cluster import KMeans\n",
+    "from sklearn.cluster import MiniBatchKMeans\n",
     "from sklearn.metrics import silhouette_score\n",
     "\n",
     "\n",
@@ -112,7 +112,7 @@
    "id": "3ada4193",
    "metadata": {},
    "source": [
-    "#### Population dataset"
+    "### Population dataset"
    ]
   },
   {
@@ -354,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": 140,
-   "id": "50beefb6",
+   "id": "9e77841a",
    "metadata": {},
    "outputs": [
     {
@@ -455,20 +455,115 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "65d6586e",
+   "metadata": {},
+   "source": [
+    "### Customers dataset\n",
+    "Here we can apply the same dimensionality reduction as before."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "37343236",
+   "execution_count": 158,
+   "id": "06d08b93",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Scale the data\n",
+    "sc = StandardScaler()\n",
+    "scaled_customers_df = sc.fit_transform(customers_df)\n",
+    "\n",
+    "# Fit the PCA with 127 onto the population dataset\n",
+    "pca = PCA(n_components=157, random_state=101)\n",
+    "pca_customers = pca.fit_transform(scaled_customers_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "097f3396",
+   "metadata": {},
+   "source": [
+    "## 1.2 Clustering\n",
+    "In this section we will continue using the results of the PCA for the population dataset to find the number of clusters that is able to segment the data. Then we will fit the same clusters onto the customers' dataset. To evaluate the correct number of clusters we can use a combination of the elbow method and a silhouette analysis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21693534",
+   "metadata": {},
+   "source": [
+    "### Population dataset\n",
+    "Find the best number of clusters (k)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "id": "b057c5b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (<ipython-input-165-ecf08b03b0bc>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-165-ecf08b03b0bc>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    kmeans = MiniBatchKMeans(n_clusters=k, random_state=101, batch_size >= 2048).fit(pca_population)\u001b[0m\n\u001b[1;37m                                                             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m positional argument follows keyword argument\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Build different models with different values of k, from 1 to 20\n",
+    "max_clusters = 20\n",
+    "sum_of_squared_distances = []\n",
+    "silhouette_scores = []\n",
+    "\n",
+    "for k in range(1, max_clusters+1):\n",
+    "    print(f\"Fitting model with {k} clusters...\")\n",
+    "    kmeans = MiniBatchKMeans(n_clusters=k, random_state=101, batch_size >= 2048).fit(pca_population)\n",
+    "    \n",
+    "    # Sum of squared distances for the elbow method\n",
+    "    sum_of_squared_distances.append(kmeans.inertia_)\n",
+    "    \n",
+    "    # Silhouette score (only applicable when clusters > 1)\n",
+    "    if k > 1:\n",
+    "        silhouette_avg = silhouette_score(pca_population, kmeans.labels_)\n",
+    "        silhouette_scores.append(silhouette_avg)\n",
+    "    else:\n",
+    "        silhouette_scores.append(np.nan)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "06d08b93",
+   "id": "fadf0bed",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Elbow Method Visualization\n",
+    "plt.figure(figsize=(10,5))\n",
+    "plt.plot(range(1, max_clusters+1), sum_of_squared_distances, 'bx-')\n",
+    "plt.xlabel('Number of clusters (k)')\n",
+    "plt.ylabel('Sum of squared distances')\n",
+    "plt.title('Elbow Method For Optimal k')\n",
+    "plt.show();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9a2eaa9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Silhouette Analysis Visualization:\n",
+    "plt.figure(figsize=(10,5))\n",
+    "plt.plot(range(2, max_clusters+1), silhouette_scores[1:], 'gx-')\n",
+    "plt.xlabel('Number of clusters (k)')\n",
+    "plt.ylabel('Silhouette Score')\n",
+    "plt.title('Silhouette Analysis For Optimal k')\n",
+    "plt.show()"
+   ]
   },
   {
    "cell_type": "markdown",
