remove GEBURTS column

--- a/arvarto-customer-segmentation/01-data-cleaning.ipynb
+++ b/arvarto-customer-segmentation/01-data-cleaning.ipynb
@@ -8445,7 +8445,8 @@
     "- `LNR`: It seems is just an id. No information available in the data dictionary.\n",
     "- `EINGEFUEGT_AM`: It seems to be a date when the person's information was added to the table. No information available in the data dictionary.\n",
     "- `D19_LETZTER_KAUF_BRANCHE`, `D19_TELKO_ONLINE_QUOTE_12`, `D19_VERSI_ONLINE_QUOTE_12`, `D19_VERSI_ONLINE_DATUM`, `D19_SOZIALES`: These column deviate from the other D19 columns in their content or there isn't any information availalble in the data dictionary.\n",
-    "- `ALTERSKATEGORIE_FEIN`, `ALTERSKATEGORIE_GROB`: These columns are approximated age category columns, which are calculated using the name of the person. Since we can directly get the age from the column `GEBURTSJAHR`, these columns are redundant.\n",
+    "- `ALTERSKATEGORIE_FEIN`, `ALTERSKATEGORIE_GROB`: These columns are approximated age category columns, which were calculated using the name of the person. We don't know if this data is accurate and for one the more granular column no information about the category is available.\n",
+    "- `GEBURTSJAHR`: This column has more than half values with 0s, which is the same as unknown.\n",
     "- `_24`columns: These columns refer to the last 24 months. Since there are already values for the last 12 months, these columns are redundant and will always be highly correlated.\n",
     "- `_GROB` columns: We can remove these columns because they have the same information as the respective `_FEIN` columns but just in a higher level. The `_FEIN` columns are more granular and therefore more precise.\n",
     "- Columns that are missing in the data dictionary: These columns cannot be interpreted, therefore it does not make sense to use them for further analysis.\n",
@@ -8468,7 +8469,7 @@
     "                                                    \"D19_VERSI_ONLINE_DATUM\", \"LP_FAMILIE_GROB\", \"LP_LEBENSPHASE_GROB\", \n",
     "                                                    \"LP_STATUS_GROB\", \"D19_BANKEN_ANZ_24\", \"D19_GESAMT_ANZ_24\", \n",
     "                                                    \"D19_TELKO_ANZ_24\", \"D19_VERSAND_ANZ_24\", \"D19_VERSI_ANZ_24\",\n",
-    "                                                    \"D19_SOZIALES\"], axis=1)"
+    "                                                    \"D19_SOZIALES\",\"GEBURTSJAHR\"], axis=1)"
    ]
   },
   {
@@ -10089,11 +10090,6 @@
        "      <td>[3.0, 4.0, 5.0, 1.0, 2.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>GEBURTSJAHR</th>\n",
-       "      <td>int64</td>\n",
-       "      <td>[1996, 1979, 1957, 1963, 1943, 0, 1964, 1974, 1975, 1941, 1993, 1946, 1988, 1991, 1966, 1949, 1982, 1972, 1990, 1985, 1989, 1948, 1935, 1997, 1994, 1987, 2002, 1950, 1965, 1969, 1978, 1958, 1944, 1967, 1977, 1960, 1970, 1973, 1971, 1937, 1947, 1926, 1954, 1981, 1962, 1992, 2008, 1976, 1928, 1927, 1968, 1940, 1952, 1961, 2006, 1938, 1945, 1942, 1984, 1930, 1980, 1959, 1986, 1931, 1955, 1983, 2010, 1951, 1921, 1929, 1939, 2001, 1995, 1956, 1953, 2012, 1934, 1913, 1914, 1922, 2004, 1936, 2009, 2003, 2013, 1998, 2007, 1932, 2005, 1923, 1925, 2015, 1933, 2017, 2000, 1999, 2014, 1920, 1924, 2016, ...]</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>GFK_URLAUBERTYP</th>\n",
        "      <td>float64</td>\n",
        "      <td>[10.0, 1.0, 5.0, 12.0, 9.0, 3.0, 8.0, 11.0, 4.0, 7.0, 2.0, 6.0]</td>\n",
@@ -11282,7 +11278,6 @@
        "FINANZTYP                      int64   \n",
        "GEBAEUDETYP                  float64   \n",
        "GEBAEUDETYP_RASTER           float64   \n",
-       "GEBURTSJAHR                    int64   \n",
        "GFK_URLAUBERTYP              float64   \n",
        "GREEN_AVANTGARDE               int64   \n",
        "HEALTH_TYP                     int64   \n",
@@ -11584,7 +11579,6 @@
        "FINANZTYP                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         [1, 6, 5, 2, 4, 3]  \n",
        "GEBAEUDETYP                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      [8.0, 1.0, 3.0, 2.0, 6.0, 4.0, 5.0]  \n",
        "GEBAEUDETYP_RASTER                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         [3.0, 4.0, 5.0, 1.0, 2.0]  \n",
-       "GEBURTSJAHR                                                                                                                               [1996, 1979, 1957, 1963, 1943, 0, 1964, 1974, 1975, 1941, 1993, 1946, 1988, 1991, 1966, 1949, 1982, 1972, 1990, 1985, 1989, 1948, 1935, 1997, 1994, 1987, 2002, 1950, 1965, 1969, 1978, 1958, 1944, 1967, 1977, 1960, 1970, 1973, 1971, 1937, 1947, 1926, 1954, 1981, 1962, 1992, 2008, 1976, 1928, 1927, 1968, 1940, 1952, 1961, 2006, 1938, 1945, 1942, 1984, 1930, 1980, 1959, 1986, 1931, 1955, 1983, 2010, 1951, 1921, 1929, 1939, 2001, 1995, 1956, 1953, 2012, 1934, 1913, 1914, 1922, 2004, 1936, 2009, 2003, 2013, 1998, 2007, 1932, 2005, 1923, 1925, 2015, 1933, 2017, 2000, 1999, 2014, 1920, 1924, 2016, ...]  \n",
        "GFK_URLAUBERTYP                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                      [10.0, 1.0, 5.0, 12.0, 9.0, 3.0, 8.0, 11.0, 4.0, 7.0, 2.0, 6.0]  \n",
        "GREEN_AVANTGARDE                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              [0, 1]  \n",
        "HEALTH_TYP                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             [3, 2, 1, -1]  \n",
@@ -12021,7 +12015,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of columns: 344\n"
+      "Number of columns: 343\n"
      ]
     }
    ],
@@ -12056,7 +12050,7 @@
    "outputs": [],
    "source": [
     "# convert date columns to a relative number (age) to 2023\n",
-    "date_columns = [\"EINGEZOGENAM_HH_JAHR\", \"GEBURTSJAHR\", \"MIN_GEBAEUDEJAHR\"]\n",
+    "date_columns = [\"EINGEZOGENAM_HH_JAHR\",\"MIN_GEBAEUDEJAHR\"]\n",
     "\n",
     "for col in date_columns:\n",
     "    cleaned_cleaned_population_df[col+\"_RTV23\"] = 2023 - cleaned_cleaned_population_df[col]\n",
@@ -12093,7 +12087,7 @@
    "metadata": {},
    "source": [
     "__Step 6 for cleaning function__:\n",
-    "- Convert year columns `EINGEZOGENAM_HH_JAHR`, `GEBURTSJAHR`, `MIN_GEBAEUDEJAHR` to a relative number (age)"
+    "- Convert year columns `EINGEZOGENAM_HH_JAHR`, `MIN_GEBAEUDEJAHR` to a relative number (age)"
    ]
   },
   {
@@ -12104,7 +12098,7 @@
    "outputs": [],
    "source": [
     "# convert date columns to a relative number (age) to 2023\n",
-    "date_columns = [\"EINGEZOGENAM_HH_JAHR\", \"GEBURTSJAHR\", \"MIN_GEBAEUDEJAHR\"]\n",
+    "date_columns = [\"EINGEZOGENAM_HH_JAHR\", \"MIN_GEBAEUDEJAHR\"]\n",
     "\n",
     "for col in date_columns:\n",
     "    cleaned_population_df[col+\"_RTV23\"] = 2023 - cleaned_population_df[col]\n",
@@ -12154,7 +12148,7 @@
     "    - fill missing values for `GEBAEUDETYP_RASTER` and `KONSUMNAEHE` column with location-based columns.\n",
     "    - drop rows for which the missing values could not be filled.\n",
     "5. Encode columns `OST_WEST_KZ`, `CAMEO_DEUG_2015` and `CAMEO_DEU_2015`\n",
-    "6. Convert year columns `EINGEZOGENAM_HH_JAHR`, `GEBURTSJAHR`, `MIN_GEBAEUDEJAHR` to a relative number (age)."
+    "6. Convert year columns `EINGEZOGENAM_HH_JAHR`, `MIN_GEBAEUDEJAHR` to a relative number (age)."
    ]
   },
   {
@@ -12187,7 +12181,7 @@
     "            - fill missing values for `GEBAEUDETYP_RASTER` and `KONSUMNAEHE` column with location-based columns.\n",
     "            - drop rows for which the missing values could not be filled.\n",
     "    5. Encode columns `OST_WEST_KZ`, `CAMEO_DEUG_2015` and `CAMEO_DEU_2015`\n",
-    "    6. Convert year columns `EINGEZOGENAM_HH_JAHR`, `GEBURTSJAHR`, `MIN_GEBAEUDEJAHR` to a relative number (age).\n",
+    "    6. Convert year columns `EINGEZOGENAM_HH_JAHR`, `MIN_GEBAEUDEJAHR` to a relative number (age).\n",
     "    \n",
     "    PARAMETERS:\n",
     "    -----------\n",
@@ -12224,7 +12218,7 @@
     "                 \"ALTERSKATEGORIE_GROB\", \"D19_TELKO_ONLINE_QUOTE_12\", \"D19_VERSI_ONLINE_QUOTE_12\",\n",
     "                 \"D19_VERSI_ONLINE_DATUM\", \"LP_FAMILIE_GROB\", \"LP_LEBENSPHASE_GROB\", \n",
     "                 \"LP_STATUS_GROB\", \"D19_BANKEN_ANZ_24\", \"D19_GESAMT_ANZ_24\", \n",
-    "                 \"D19_TELKO_ANZ_24\", \"D19_VERSAND_ANZ_24\", \"D19_VERSI_ANZ_24\"], axis=1)\n",
+    "                 \"D19_TELKO_ANZ_24\", \"D19_VERSAND_ANZ_24\", \"D19_VERSI_ANZ_24\", \"GEBURTSJAHR\"], axis=1)\n",
     "\n",
     "    # Get list of columns in the data dictionary\n",
     "    attributes_nms = list(attributes_df[\"Attribute\"].unique())\n",
@@ -12387,7 +12381,7 @@
     "    # Apply step 6 of the cleaning process\n",
     "    ######################################\n",
     "    # convert date columns to a relative number (age) to 2023\n",
-    "    date_columns = [\"EINGEZOGENAM_HH_JAHR\", \"GEBURTSJAHR\", \"MIN_GEBAEUDEJAHR\"]\n",
+    "    date_columns = [\"EINGEZOGENAM_HH_JAHR\", \"MIN_GEBAEUDEJAHR\"]\n",
     "\n",
     "    for col in date_columns:\n",
     "        df[col+\"_RTV23\"] = 2023 - df[col]\n",
