final push after finalizing text corrections and code re-runing

--- a/arvarto-customer-segmentation/02-customer-segmentation.ipynb
+++ b/arvarto-customer-segmentation/02-customer-segmentation.ipynb
@@ -9,11 +9,11 @@
     "The goal of this project is to analyze demographics data for customers of a mail-order sales company in Germany, comparing it against demographics information for the general population with the aim of understanding which segment of the population the company should aim for in its next mail campaign. \n",
     "\n",
     "The project is divided into __three main parts__:\n",
-    "1. The first part will be decicated to the data preparation: This data is high-dimensional and has a high degree of missing values, therefore it is important to understand and clean the data.\n",
+    "1. The first part will be decicated to the __data preparation__: This data is high-dimensional and has a high degree of missing values, therefore it is important to understand and clean the data.\n",
     "2. In this section the customers will be segmented using a __unsupervised learning approach__ and using the customer's data against the general population's data. Not only is the goal to understand which groups of customers are more interesting for the campaign but also to select the most important features.\n",
     "3. Using the information gained a __supervised learning algorithm__ will be used for a classification task to predict which recipients are most likely to become a customer for the mail-order company.\n",
     "\n",
-    "__Note__: This notebook handles part 2. The first part of the data cleaning process can be found in this notebook [here](https://github.com/bruno-f7s/portfolio/blob/main/arvarto-customer-segmentation/01-data-cleaning.ipynb)."
+    "__Note__: This notebook only handles part 2."
    ]
   },
   {
