--- a/arvarto-customer-segmentation/02-customer-segmentation.ipynb
+++ b/arvarto-customer-segmentation/02-customer-segmentation.ipynb
@@ -258,10 +258,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def plot_pca(df, column_list, df_name, threshhold):\n",
+    "def plot_pca(df, column_list, df_name, threshold):\n",
     "    \"\"\"\n",
     "    This function plots the cumulative explained variance using PCA for a particular threshold of explained variance. \n",
-    "    It takes in as arguments a dataset, the list of columns, the name of the dataset and a threshhold to find the number of components for that explained variance.\n",
+    "    It takes in as arguments a dataset, the list of columns, the name of the dataset and a threshold to find the number of components for that explained variance.\n",
     "    \"\"\"\n",
     "    # Step 1: Select the data\n",
     "    df = df[column_list]\n",
@@ -272,7 +272,7 @@
     "\n",
     "    explained_variance = pca.explained_variance_ratio_\n",
     "    cum_explained_variance = np.cumsum(explained_variance)\n",
-    "    n_components_for_threshhold = np.where(cum_explained_variance >= threshhold)[0][0]\n",
+    "    n_components_for_threshold = np.where(cum_explained_variance >= threshold)[0][0]\n",
     "    \n",
     "    # Step 3 - Plot the Cumulative Explained Variances\n",
     "    plt.figure(figsize=(16,6))\n",
@@ -282,11 +282,11 @@
     "    plt.ylabel('Cumulative explained variance ratio')\n",
     "    plt.xlabel('Number of components')\n",
     "    plt.title(f'Cumulative Explained Variance Plot for the {df_name}')\n",
-    "    plt.axhline(y=threshhold, color='grey', linestyle='--', label=f'Threshold at {threshhold}') \n",
+    "    plt.axhline(y=threshold, color='grey', linestyle='--', label=f'Threshold at {threshold}') \n",
     "\n",
-    "    plt.annotate(text = f\"{n_components_for_threshhold} components explain\\n{round(threshhold*100)}% of the variance.\",\n",
-    "                 xy = (n_components_for_threshhold, threshhold),\n",
-    "                 xytext = (n_components_for_threshhold, threshhold-0.1),\n",
+    "    plt.annotate(text = f\"{n_components_for_threshold} components explain\\n{round(threshold*100)}% of the variance.\",\n",
+    "                 xy = (n_components_for_threshold, threshold),\n",
+    "                 xytext = (n_components_for_threshold, threshold-0.1),\n",
     "                 arrowprops=dict(arrowstyle='->'))\n",
     "\n",
     "    plt.legend(loc='lower right')\n",
@@ -5094,8 +5094,8 @@
     "### 1.2.1 Find best number of clusters\n",
     "To find the best number of clusters (K) we can use the population dataset and combine different clustering evaluation methods:\n",
     "- Elbow method\n",
-    "- Silloutte Scores\n",
-    "- Silloutte Plot"
+    "- Silhoutte Scores\n",
+    "- Silhoutte Plot"
    ]
   },
   {
