--- a/arvarto-customer-segmentation/01-data-cleaning.ipynb
+++ b/arvarto-customer-segmentation/01-data-cleaning.ipynb
@@ -12444,7 +12444,7 @@
     "    \"\"\"\n",
     "    DESCRIPTION\n",
     "    -----------\n",
-    "    This function takes is used to cleaned and process the Arvarto datasets with consumer data relating to the German population.\n",
+    "    This function takes is used to cleaned and process the Arvato datasets with consumer data relating to the German population.\n",
     "    It has the processing following 7 steps:\n",
     "    1. Manually drop the columns which have more than 50% of the data missing: `ALTER_KIND4`, `ALTER_KIND3`, `ALTER_KIND2`, `ALTER_KIND1`, `EXTSEL992` and `KK_KUNDENTYP`.    \n",
     "    2. Find and automatically remove the rows from the dataset which have more than 50% of the data missing.\n",
